# rpipe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: demo.py
rpipe/: __init__.py  core.py
tests/: test_rpipe.py
